Fixed snake block bug(glitching)