@@ -2,18 +2,23 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.*;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.IntStream;
 
 public class SnakePanel extends JPanel {
 
-    private static  final int WINDOW_WIDTH = 1460;
+    private static final int WINDOW_WIDTH = 1460;
     private static final int WINDOW_HEIGHT = 920;
     private final int BLOCK_WIDTH = 35;
     private final int BLOCK_HEIGHT = 35;
     private final int spaceBtwBlocks = 40;
     private final int nextIndex = 10;
-    private boolean Left, Up, Down, Right;
+    private boolean Left;
+    private boolean Up;
+    private boolean Down;
+    private boolean Right;
     private Font font = new Font("Roman", Font.PLAIN, 38);
     private Food food = new Food();
 
@@ -23,7 +28,8 @@ public class SnakePanel extends JPanel {
     static int gameAreaEndx = WINDOW_WIDTH - 100;
     static int gameAreaEndY = WINDOW_HEIGHT - 120;
 
-    private ArrayList<Block> BlockList = new ArrayList<>(1000);
+    private ArrayList<Block> BlockList2 = new ArrayList<>(1000);
+    private LinkedList<Block> BlockList = new LinkedList<>();
     private Direction direction;
     private JButton playButton;
 
@@ -31,7 +37,7 @@ public class SnakePanel extends JPanel {
     /**
      *
      */
-     SnakePanel() {
+    SnakePanel() {
 
         setBackground(Color.getHSBColor(23, .5f, .9f)); // color of panel
 
@@ -47,6 +53,7 @@ public class SnakePanel extends JPanel {
 
     /**
      * paints the interface where the game is played
+     *
      * @param page user interface to build on top off
      */
     protected void paintComponent(Graphics page) {
@@ -64,99 +71,98 @@ public class SnakePanel extends JPanel {
         // generate length of snake display
         snakeInterface.setColor(Color.white);
         snakeInterface.setFont(font);
-        snakeInterface.drawString("Length: " + BlockList.size(), gameAreaEndx -130, gameAreaEndY + 90);
-
+        snakeInterface.drawString("Length: " + BlockList.size(), gameAreaEndx - 130, gameAreaEndY + 90);
 
 
     }
 
-     void checkIfFoodEaton() {
-        int x = BlockList.get(0).getX(); // front of snake x coordinate
-        int y = BlockList.get(0).getY(); // fornt of snake y coordinate
-        int snakeEnd = BlockList.size() - 1;
-        if (x == food.getX() && y == food.getY()) {
-            for (int i = 0; i < 5; i++) {
-                if(snakeEnd < 10){
-                    if (direction == Direction.DOWN) {
-                        BlockList.add(new Block(BlockList.get(snakeEnd).getX(), BlockList.get(snakeEnd).getY() - spaceBtwBlocks));
 
-                    } else if (direction == Direction.UP) {
-                        BlockList.add(new Block(BlockList.get(snakeEnd).getX(), BlockList.get(snakeEnd).getY() + spaceBtwBlocks));
 
-                    } else if (direction == Direction.LEFT) {
-                        BlockList.add(new Block(BlockList.get(snakeEnd).getX() + spaceBtwBlocks, BlockList.get(snakeEnd).getY()));
+    void checkIfFoodEaton() {
+        if (BlockList.getFirst().getX() == food.getX() &&  BlockList.getFirst().getY() == food.getY()) {
+            if (direction == Direction.DOWN) {
+                growSnake(0, -spaceBtwBlocks);
 
-                    } else {
-                        BlockList.add(new Block(BlockList.get(snakeEnd).getX() - spaceBtwBlocks, BlockList.get(snakeEnd).getY()));
-                    }
-                }
-                else
-                if (direction == Direction.DOWN) {
-                    BlockList.add(new Block(BlockList.get(nextIndex).getX(), BlockList.get(nextIndex).getY() - spaceBtwBlocks));
+            } else if (direction == Direction.UP) {
+                growSnake(0, spaceBtwBlocks);
 
-                } else if (direction == Direction.UP) {
-                    BlockList.add(new Block(BlockList.get(nextIndex).getX(), BlockList.get(nextIndex).getY() + spaceBtwBlocks));
-
-                } else if (direction == Direction.LEFT) {
-                    BlockList.add(new Block(BlockList.get(nextIndex).getX() + spaceBtwBlocks, BlockList.get(nextIndex).getY()));
-
-                } else {
-                    BlockList.add(new Block(BlockList.get(nextIndex).getX() - spaceBtwBlocks, BlockList.get(nextIndex).getY()));
-                }
-
+            } else if (direction == Direction.LEFT) {
+                growSnake(spaceBtwBlocks, 0);
+            } else {
+                growSnake(-spaceBtwBlocks, 0);
             }
-           generateNewFood();
+            generateNewFood();
 
         }
+    }
+
+    // delay between each move of the snake
+    private void pause(int speed){
+        try {
+            Thread.sleep(speed);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+    /**
+     * helper method that grows snake body
+     */
+    private void growSnake(int addToX, int addToY){
+
+        int index = 0;
+        for (int count = 0; count < 5; count++){
+
+            BlockList.add(1, new Block(BlockList.get(index).getX() + addToX,
+                    BlockList.get(index).getY() + addToY));
+            //pause(100);
+        }
+
+
     }
 
     /**
      * generated a new food item for the snake to eat
      */
-    private void generateNewFood(){
-            boolean foodNotOnSnake;
+    private void generateNewFood() {
+        AtomicBoolean foodNotOnSnake = new AtomicBoolean(false);
 
         do {
             food.generateNewFood();
-             foodNotOnSnake = true;
+            foodNotOnSnake.set(true);
             for (Block block : BlockList) {
                 if (food.getX() == block.getX() && food.getY() == block.getY()) {
-                    foodNotOnSnake = false;
+                    foodNotOnSnake.set(false);
                     break;
                 }
             }
 
-        } while(!foodNotOnSnake);
+        } while (!foodNotOnSnake.get());
     }
 
 
-
-    private void endTurn(){
+    private void endTurn() {
         playButton.setVisible(true);
         playButton.setBounds(gameAreaStartX * 14, gameAreaStartY * 5, 400, 100);
         playButton.addActionListener(e -> actionPerformed());
 
     }
-    private boolean hitBoundary() {
-        int x = BlockList.get(0).getX();
-        int y = BlockList.get(0).getY();
-        if (x > gameAreaEndx|| x < gameAreaStartX) {
-            return true;
-        } else return y > gameAreaEndY|| y < gameAreaStartY;
 
+    /**
+     * check if the snake has hit a boundary
+     *
+     * @return true if snake head is in a boundary
+     */
+    private boolean hitBoundary() {
+        int x = BlockList.getFirst().getX();
+        int y = BlockList.getFirst().getY();
+        return y > gameAreaEndY || y < gameAreaStartY || x > gameAreaEndx || x < gameAreaStartX;
     }
 
     private boolean hitBody() {
-        int x = BlockList.get(0).getX();
-        int y = BlockList.get(0).getY();
-        for (int i = 1; i < BlockList.size(); i++) {
-
-            if (x == BlockList.get(i).getX() && y == BlockList.get(i).getY()) {
-                return true;
-            }
-
-        }
-        return false;
+        int headX = BlockList.getFirst().getX(); // x coordinate of head block
+        int headY = BlockList.getFirst().getY(); // y coordinate of head block
+        return IntStream.range(1, BlockList.size()).anyMatch(i -> headX == BlockList.get(i).getX() && headY == BlockList.get(i).getY());
     }
 
     void move() {
@@ -168,25 +174,24 @@ public class SnakePanel extends JPanel {
 
 
             if (direction == Direction.UP) {
-                BlockList.add(0, new Block(x, y - spaceBtwBlocks));
-                BlockList.remove(BlockList.size() - 1);
+                BlockList.addFirst(new Block(x, y - spaceBtwBlocks));
+                BlockList.removeLast();
             }
 
             if (direction == Direction.DOWN) {
-                BlockList.add(0, new Block(x, y + spaceBtwBlocks));
-                BlockList.remove(BlockList.size() - 1);
+                BlockList.addFirst(new Block(x, y + spaceBtwBlocks));
+                BlockList.removeLast();
             }
             if (direction == Direction.LEFT) {
-                BlockList.add(0, new Block(x - spaceBtwBlocks, y));
-                BlockList.remove(BlockList.size() - 1);
+                BlockList.addFirst(new Block(x - spaceBtwBlocks, y));
+                BlockList.removeLast();
             }
 
             if (direction == Direction.RIGHT) {
-                BlockList.add(0, new Block(x + spaceBtwBlocks, y));
-                BlockList.remove(BlockList.size() - 1);
+                BlockList.addFirst(new Block(x + spaceBtwBlocks, y));
+                BlockList.removeLast();
             }
-        }
-        else endTurn();
+        } else endTurn();
 
     }
 
@@ -194,13 +199,14 @@ public class SnakePanel extends JPanel {
         playButton.setVisible(false);
         BlockList.clear();
         BlockList.add(new Block(400, 400));
-        direction = Direction.nothing;
+        direction = Direction.NOTHING;
     }
 
     public enum Direction {
-        RIGHT, LEFT, UP, DOWN, nothing
+        RIGHT, LEFT, UP, DOWN, NOTHING
 
     }
+
     private class BlockListener implements KeyListener {
 
         public void keyPressed(KeyEvent keyPress) {
@@ -213,12 +219,12 @@ public class SnakePanel extends JPanel {
 
             // change direction to right if right arrow key or D key is pressed. Do not change if curr direction is
             // left
-            if ((keyPress.getKeyCode() == KeyEvent.VK_RIGHT || keyPress.getKeyCode() == KeyEvent.VK_D) && (direction != Direction.LEFT || BlockList.size() == 1) ) {
+            if ((keyPress.getKeyCode() == KeyEvent.VK_RIGHT || keyPress.getKeyCode() == KeyEvent.VK_D) && (direction != Direction.LEFT || BlockList.size() == 1)) {
                 direction = Direction.RIGHT;
             }
 
             // change direction to left if left arrow key or A key is pressed. Do not change if curr direction is right
-            else if ((keyPress.getKeyCode() == KeyEvent.VK_LEFT || keyPress.getKeyCode() == KeyEvent.VK_A) && (direction != Direction.RIGHT || BlockList.size() ==1)) {
+            else if ((keyPress.getKeyCode() == KeyEvent.VK_LEFT || keyPress.getKeyCode() == KeyEvent.VK_A) && (direction != Direction.RIGHT || BlockList.size() == 1)) {
                 direction = Direction.LEFT;
             }
             // change direction to up if up arrow key or W key is pressed. Do not change if curr direction is down
@@ -227,7 +233,7 @@ public class SnakePanel extends JPanel {
 
             }
             // change direction to down if left arrow key or s key is pressed. Do not change if curr direction is up
-            else  if ((keyPress.getKeyCode() == KeyEvent.VK_DOWN || keyPress.getKeyCode() == KeyEvent.VK_S) && (direction != Direction.UP || BlockList.size() == 1)) {
+            else if ((keyPress.getKeyCode() == KeyEvent.VK_DOWN || keyPress.getKeyCode() == KeyEvent.VK_S) && (direction != Direction.UP || BlockList.size() == 1)) {
                 direction = Direction.DOWN;
 
             }
